# simple-aiml-workflow

./: .env.example  .gitignore  .gitmodules  README.md  aiml_xapp.py  api-docs.html  docker-compose.test.yml  docker-compose.yml  oran-sc-ric.patch  run_all_tests.sh  run_versioning_tests.sh
analysis-and-training/: Dockerfile  README.md  analyze_cqi_thp.py  convert_scripts.sh  influxdb_data_analysis.py  jupyter_notebook_config.py  requirements.txt
analysis-and-training/data/: data.csv  stats_exp_1745277823.csv
analysis-and-training/notebooks/: cyberpowder-dataset-analysis.ipynb  (+4 more)
datalake/: README.md  backup_influxdb_metrics.sh  restore_influxdb_metrics.sh
experiment-runner/: Dockerfile  README.md  __init__.py  analyze_model_performance.py  data.txt  main.py  pyproject.toml  requirements.txt  run_experiment.py  run_inference_experiment.py  runner.py  simple_model_test.py
experiment-runner/config/: __init__.py  config_loader.py  default.yaml  inference.yaml  inference_config_loader.py  node_config.yaml  test.yaml
experiment-runner/core/: __init__.py  experiment_runner.py  inference_experiment_runner.py  node_controller.py  signal_handler.py
experiment-runner/utils/: __init__.py  common.py
inference-server/: Dockerfile  README.md  __init__.py  app.py  app_factory.py  create_test_models.py  openapi.yaml  requirements.txt  run_tests.sh
model-server/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  app_factory.py  create_test_models.py  openapi.yaml  requirements.txt  run_tests.sh
shared/: README.md  create_test_models.py  ml_utils.py  test_utils.py
(+31 files in other folders)
