[project]
name = "experiment-runner"
version = "0.1.0"
description = "Experiment runner for AI/ML workflow"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "fabric>=2.6.0",
    "influxdb-client>=1.19.0",
    "pytest>=6.2.4",
    "numpy==1.24.3",
    "pandas==2.0.1",
    "tabulate==0.9.0",
    "torch==2.0.1",
    "onnx==1.17.0",
    "onnxruntime==1.21.0",
    "huggingface_hub==0.29.2"
]
